# modular-equities-trading-engine

./: README.md  mrtl.txt
agent/: live.h  load_strategy_library.h  loader.h  sampler.h  simulator.h
include/mrtl/adjust_predictions/: adjust_predictions.h
include/mrtl/common/: constants.h  country.h  functions.h  log_record.h  lookup_table.h  moving_averages.h  rbtree.h  ring_buffer.h  task.h  types.h
include/mrtl/strategy/: fuction_signatures.h
include/mrtl/strategy/classic/: config.h  misc.h  symbol_data.h
include/strategy/momentum_sieve/: config.h
model/mart/: mart.h
src/: CMakeLists.txt
src/adjust_predictions/: CMakeLists.txt  adjust_predictions.c
src/agent/: live.c  load_agent_library.c  load_strategy_library.c  sampler.c  simulator.c
src/common/: CMakeLists.txt  country.c  functions.c  log_record.c  lookup_table.c  moving_averages.c  rbtree.c  ring_buffer.c  task.c  test.c  types.c
src/model/mart/: mart.c  test.c
src/strategy/classic/: features.c  generate_orders.c  init.c  misc.c  predict.c  symbol_data.c  targets.c
src/strategy/momentum_sieve/: CMakeLists.txt  features.c  generate_orders.c  init.c  predict.c  symbol_data.c  targets.c
